ready whithout chat